--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ nav {
     padding-block: 10rem;
 }
 
-/* Profile */
+/* Profile and edit profile */
 .profile-parent-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -192,4 +192,21 @@ nav {
 .pict {
     width: 10rem;
     height: 10rem;
+}
+
+.edit-profile-btn {
+    padding: 0.3em 1em;
+    background-color: var(--clr-blue-100);
+    border-radius: 10px;
+}
+
+/* Edit profile */
+.cancel-btn {
+    border-radius: 10px;
+    background-color: var(--clr-orange);
+}
+
+.save-btn {
+    border-radius: 10px;
+    background-color: var(--clr-green);
 }
